--- a/CWD-Week-2/index.qmd
+++ b/CWD-Week-2/index.qmd
@@ -146,3 +146,5 @@ Preliminary questions:
 ## For Next Time
 
 Let's build at least a barebones portfolio.  I don't care which method you choose though I have used `blogdown` for years and am somewhat new to `quarto`.
+
+If you want to use blogdown, I would strongly encourage you to basically follow along [here](https://www.apreshill.com/slides/blogdown-workshop-slides.html).  It is a nice walkthrough.
